test/compilable/imports/package10022/c.d

module imports.package10022.c;

void func() {}
