test/fail_compilation/imports/test314imp.d
module imports.test314a;

void foo()
{
}
